[NEXUS-8398] Styling bugs and [NEXUS-8399] LDAP creation
* Abstracts rowexpander styling into scss
* Allow nx-info to scroll, prevent column name from wrapping
* Don't reset forms in previous drilldown panels
* Fixes misaligned info blocks
* Remove grey background from bundles list toolbar
* Removes excess border from ItemSelector controls
* Removes top border from feature menu

Fixes #1174

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/grid/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/grid/Panel.scss
@@ -11,3 +11,17 @@
   $ui-body-border-width: 0,
   $ui-padding: 5px 0 0 0
 );
+
+/**
+ * cls: 'nx-rowexpander'
+ */
+.nx-rowexpander {
+  padding: 5px;
+
+  tbody {
+    td:first-child {
+      padding-right: 5px;
+      font-weight: bold;
+    }
+  }
+}
