--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -134,22 +134,20 @@
   $ui-body-background-color: $color-white
 );
 
-.x-panel-nx-subsection {
-  .x-panel-header {
-    padding: 10px 0 5px 0 !important;
-  }
+.x-panel-nx-subsection > .x-panel-header {
+  padding: 10px 0 5px 0 !important;
 }
 
 .x-panel-nx-subsection-framed {
   border: $color-gainsboro 1px solid;
+}
 
-  .x-panel-header {
-    padding: 10px 9px 5px 9px !important;
-  }
+.x-panel-nx-subsection-framed > .x-panel-header {
+  padding: 10px 9px 5px 9px !important;
+}
 
-  .x-panel-body {
-    padding: 9px 9px 10px 9px !important;
-  }
+.x-panel-nx-subsection-framed > .x-panel-body {
+  padding: 9px 9px 10px 9px !important;
 }
 
 /**
@@ -166,6 +164,10 @@
   border-width: 0 2px 0 0;
   border-color: $color-light-gray;
   border-style: solid;
+
+  .x-grid-header-ct {
+    border: none;
+  }
 
   .x-panel-body-nx-feature-menu {
     .x-grid-cell {
